--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
     "require": {
         "silex/silex": "~1.3",
         "doctrine/dbal": "2.5"
+    },
+     "autoload": {
+        "psr-4": {"SIOC\\": "./"}
     }
 }
