--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "require": {
         "silex/silex": "~1.3",
-        "doctrine/dbal": "2.5"
+        "doctrine/dbal": "2.5",
+        "twig/twig" : "1.21.*",
+        "twbs/bootstrap" : "3.3.*"
     },
      "autoload": {
         "psr-4": {"SIOC\\": "./"}
