--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "silex/silex": "~1.3",
         "doctrine/dbal": "2.5",
         "twig/twig" : "1.21.*",
-        "twbs/bootstrap" : "3.3.*"
+        "twbs/bootstrap" : "3.3.*",
+        "symfony/security" : "2.7"
     },
      "autoload": {
         "psr-4": {"SIOC\\": "./"}
