--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,17 @@
 {
+    "repositories": [ 
+        { 
+            "type": "pear", 
+            "url": "pear.php.net" 
+        } 
+    ], 
     "require": {
         "silex/silex": "~1.3",
         "doctrine/dbal": "2.5",
         "twig/twig" : "1.21.*",
         "twbs/bootstrap" : "3.3.*",
         "symfony/security" : "2.7"
+        "pear-pear/Date_HumanDiff" : "*" 
     },
      "autoload": {
         "psr-4": {"SIOC\\": "./"}
