--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "doctrine/dbal": "2.5",
         "twig/twig" : "1.21.*",
         "twbs/bootstrap" : "3.3.*",
-        "symfony/security" : "2.7"
+        "symfony/security" : "2.7",
+        "symfony/twig-bridge": "2.1.*"
     },
      "autoload": {
         "psr-4": {"SIOC\\": "modeles"}
