--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "twig/twig" : "1.21.*",
         "twbs/bootstrap" : "3.3.*",
         "symfony/security" : "2.7",
-        "symfony/twig-bridge": "3.0.*"
+        "symfony/twig-bridge": "*"
     },
      "autoload": {
         "psr-4": {"SIOC\\": "modeles"}
