--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "symfony/security" : "2.7",
         "symfony/twig-bridge": "2.7.*",
         "php": "> 5.3.3",
-        "erivello/pdf-service-provider": "master"
+        "erivello/pdf-service-provider": "mas-master"
     },
      "autoload": {
         "psr-4": {"SIOC\\": "modeles"}
