--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "silex/silex": "~1.0",
+        "silex/silex": "1.0.*",
         "doctrine/dbal": "2.5",
         "twig/twig" : "1.21.*",
         "twbs/bootstrap" : "3.3.*",
