passage commentaire pdfprovider

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         "symfony/twig-bridge": "2.7.*",
      //   "erivello/pdf-service-provider": "dev-develop",
         "swiftmailer/swiftmailer": "5.4.2"
+        "mpdf/mpdf": "6.0.0"
+        "smalot/pdfparser": "0.9.25"
+        "mikehaertl/php-pdftk": "0.2.4"""
+        "ucsdmath/functions": "1.6.0"
     },
      "autoload": {
         "psr-4": {"SIOC\\": "modeles"}
