--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
         "twbs/bootstrap" : "3.3.*",
         "symfony/security" : "2.7",
         "symfony/twig-bridge": "2.7.*",
-     //   "erivello/pdf-service-provider": "dev-develop",
-        "kdyby/wkhtmltopdf": "0.12.*"
+        "kdyby/wkhtmltopdf": "0.12.*",
         "knplabs/knp-snappy": "*"
     },
      "autoload": {
