--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "symfony/security" : "2.7",
         "symfony/twig-bridge": "2.7.*",
         "kdyby/wkhtmltopdf": "0.12.*",
-        "h4cc/wkhtmltopdf-i386": "0.12.*"
+        "h4cc/wkhtmltopdf-i386": "0.12.*",
+        "h4cc/wkhtmltoimage-i386": "0.12.*"
 
     },
      "autoload": {
